Writing unit test

--- a/src/scss/5-objects/o-grid.scss
+++ b/src/scss/5-objects/o-grid.scss
@@ -1,5 +1,5 @@
 .o-grid {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   gap: 1.5rem;
 }
